samples/_failures_safe/1761391300_335cf1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_17fdddb6.c: In function ‘main’:
./samples/SAFE/__tmp_17fdddb6.c:166: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_17fdddb6.c:165:14: note: to match this ‘(’
  165 |     if (fgets(input, sizeof(input), stdin
      |              ^
./samples/SAFE/__tmp_17fdddb6.c:165:5: error: expected declaration or statement at end of input
  165 |     if (fgets(input, sizeof(input), stdin
      |     ^~
